--- a/20 ] Pandas Veri Analizi/5) DataFrame Satır Sütun seçimi.ipynb
+++ b/20 ] Pandas Veri Analizi/5) DataFrame Satır Sütun seçimi.ipynb
@@ -110,7 +110,7 @@
     "print(\"           --\")\n",
     "\n",
     "\n",
-    "# loc kodunu kullanarak biz kolon da seçebiliriz\n",
+    "# loc metodunu kullanarak biz kolon da seçebiliriz\n",
     "result = df.loc[:, \"Column1\"]   # tüm satırları seçilsin anlamında : koyduk\n",
     "print(result)   # satır sütun seçerken loc keywordü kullanılabilir yani\n",
     "print(\"           --\")\n",
